; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_ledtrig-ide-disk.c_ledtrig_ide_activity.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_ledtrig-ide-disk.c_ledtrig_ide_activity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ide_activity = common dso_local global i32 0, align 4
@ledtrig_ide_timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ledtrig_ide_activity() #0 {
  %1 = load i32, i32* @ide_activity, align 4
  %2 = add nsw i32 %1, 1
  store i32 %2, i32* @ide_activity, align 4
  %3 = call i32 @timer_pending(i32* @ledtrig_ide_timer)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %10, label %5

5:                                                ; preds = %0
  %6 = load i64, i64* @jiffies, align 8
  %7 = call i64 @msecs_to_jiffies(i32 10)
  %8 = add nsw i64 %6, %7
  %9 = call i32 @mod_timer(i32* @ledtrig_ide_timer, i64 %8)
  br label %10

10:                                               ; preds = %5, %0
  ret void
}

declare dso_local i32 @timer_pending(i32*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i64 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
